--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -11,7 +11,7 @@
 						<%= image_tag podcast.thumbnail.url(:medium) %> 
 						<div class="podcast_overview">
 							<h2><%= podcast.title %></h2>
-							<p class="episode_count">1 Episode</p>
+							<p class="episode_count">"number" Episodes</p>
 						</div>
 					</li>
 				<% end %>
@@ -19,4 +19,7 @@
 		</ul>
 
 	</div>
+	<%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
+ 	
+
 </div>	
