--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -1,7 +1,8 @@
 <div id="podcast_show">
   <div id="show_banner">
     <div class="wrapper_skinny">
-      <h1>The StarCraft Podcast Dashboard</h1>
+      <h1>Your Podcast Dashboard</h1>
+
     </div>
   </div>
 
@@ -23,7 +24,7 @@
           <li class="cf">
             <div class="episode_thumbnail">
               <a href="episode.html">
-                <%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail"%>
+                <%= image_tag episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail"%>
               </a>
             </div>
             <div class="episode_overview">
@@ -37,13 +38,17 @@
           </li>
         <% end %>
       </ul>
+      <%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
+
     </div>
   </div>
 </div>
 
+<!--
 <div class="pagination">
 <span class="previous_page disabled">Previous</span>
 <em class="current">1</em>
 <a href="#">2</a>
 <a class="next_page" href="#">Next</a>
 </div>
+-->
