--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -40,12 +40,16 @@
 						</div>
 					</li>
 				<% end %>
+
 			</ul>
+				<%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
+ 		
 		</div>
 	</div>
 
 </div>
 
+<!--
 <div class="pagination">
 	<span class="previous_page disabled">Previous</span>
 	<em class="current">1</em>
@@ -56,3 +60,4 @@
 </div>
 
 
+-->
